--- a/project/src/styles/HeaderNav.module.css
+++ b/project/src/styles/HeaderNav.module.css
@@ -2,4 +2,45 @@
     height: 60px;
     width: 1440px;
     box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.08);
+    font-family: 'Inter';
+    display: flex;
+    align-items: center;
+}
+
+.logo {
+    margin-left: 80px;
+}
+
+.links {
+    margin-left: 4px;
+}
+
+.links a {
+    margin-left: 80px;
+    text-decoration: none;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 17px;
+    color: #1E2123;
+}
+
+.button {
+    height: 37px;
+    width: 224px;
+    padding: 10px 18px 10px 18px;
+    background: linear-gradient(90deg, #9D94FF 0%, #6B50E9 94.5%);
+    border-radius: 19px;
+    border: none;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 17px;
+    color: #FFFFFF;
+    text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
+    margin-left: 92px;
+}
+
+.button:hover {
+    background: linear-gradient(90deg, #867CFC 0%, #6929F3 94.5%);
 }
