--- a/project/src/styles/Footer.module.css
+++ b/project/src/styles/Footer.module.css
@@ -2,4 +2,93 @@
     height: 250px;
     width: 1440px;
     box-shadow: 0px -11px 40px rgba(39, 95, 158, 0.05);
+    display: flex;
+}
+
+.info {
+    margin-top: 39px;
+    margin-left: 80px;
+}
+
+.companyName {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 15px;
+    color: #8291A3;
+    margin-top: 10px;
+}
+
+.IPinfo {
+    height: 78px;
+    width: 297px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 11px;
+    color: #8291A3;
+    margin-top: 36px;
+}
+
+.menuLeft {
+    margin-left: 30px;
+    margin-top: 18px;
+}
+
+.menuLeft div {
+    margin-top: 21px;
+}
+
+.menuLeft a {
+    text-decoration: none;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 17px;
+    color: #1E2123;
+}
+
+.apartments {
+    margin-top: 39px;
+    margin-left: 69px;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 17px;
+    color: #1E2123;
+}
+
+.apartmentsList {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-left: 69px;
+    margin-top: 12px;
+    row-gap: 8px;
+    column-gap: 53px;
+}
+
+.apartmentsList a {
+    text-decoration: none;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: #8291A3;
+}
+
+.menuRight {
+    margin-left: 102.5px;
+    margin-top: 35px;
+}
+
+.menuRight div {
+    margin-top: 8px;
+    height: 17px;
+}
+
+.menuRight a {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    color: #8291A3;
+    text-decoration: none;
 }
