--- a/project/src/styles/Header.module.css
+++ b/project/src/styles/Header.module.css
@@ -28,11 +28,25 @@
 
 .leftBlock {
     margin-left: 23px;
+    display: flex;
+    align-items: center;
 }
 
-.leftBlock a {
+/* .leftBlock div {
+    height: 40px;
+} */
+
+.leftBlock div {
     margin-left: 57px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    border-bottom: 3px solid #FFD54F;
 }
+
+/* .leftBlock div :hover {
+    border: 3px solid #FFD54F;
+} */
 
 .rightBlock {
     margin-left: 244px;
