--- a/project/src/styles/NewsList/Card.module.css
+++ b/project/src/styles/NewsList/Card.module.css
@@ -3,6 +3,7 @@
     width: 406px;
     border-radius: 10px;
     box-shadow: 0px 20px 40px 0px #877CCA26;
+    background-color: #FFFF;
 }
 
 .image {
