--- a/project/src/styles/NewsList/NewsContainer.module.css
+++ b/project/src/styles/NewsList/NewsContainer.module.css
@@ -2,8 +2,6 @@
     height: 1937px;
 }
 
-
-
 .cardContainer {
     height: 1560px;
     width: 1440px;
@@ -12,23 +10,87 @@
     grid-template-rows: 500px;
     column-gap: 30px;
     row-gap: 30px;
-    margin-left: 70px;
-    /* position: absolute;
-    z-index: 1; */
+    margin-left: 80px;
+    position: absolute;
 }
 
 .topBlock {
     display: flex;
+    justify-content: space-between;
+    height: 180px;
+}
+
+.link {
+    display: flex;
+    align-items: center;
+    margin-left: 80px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 100%;
+    color: #686868;
+    margin-top: 42px;
+}
+
+.link div:last-child {
+    margin-left: 7px;
+}
+
+.ellipse {
+    height: 3px;
+    width: 3px;
+    background-color: #664EF9;
+    border-radius: 50%;
+    margin-left: 9px;
+}
+
+.title {
+    margin-left: 80px;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 100%;
+    color: #1E2123;
+    margin-top: 25px;
+}
+
+.search {
+    margin-right: 80px;
+}
+
+.search input {
+    height: 37px;
+    width: 616.2158203125px;
+    border-radius: 20px;
+    border: none;
+    margin-top: 50px;
+    position: absolute;
+    z-index: 1;
+    margin-left: -530px;
+    margin-top: 85px;
+    text-indent: 21px;
+}
+
+.search button {
+    width: 53.07px;
+    height: 39.07px;
+    background-color: #664EF9;
+    border: 2px solid #664EF9;
+    border-radius: 19px;
+    margin-top: 85px;
+    position: absolute;
+    z-index: 2;
+    margin-left: 37px;
 }
 
 .background {
     background: linear-gradient(90deg, #94AFFF 0%, #4E64F9 94.5%);
     opacity: 0.1;
     border-radius: 40px;
-    /* width: 848.5px;
-    height: 999.21435546875px; */
-    border-radius: 40px;
+    width: 800px;
+    height: 999.21435546875px;
+    border-radius: 40px 0px 0px 40px;
     margin-left: 641px;
-    /* position: absolute;
-    z-index: 0; */
+    position: absolute;
+    margin-top: -150px;
 }
