--- a/project/src/styles/Contacts/Contacts.module.css
+++ b/project/src/styles/Contacts/Contacts.module.css
@@ -1,11 +1,11 @@
 .container {
-    height: 599px;
+    height: 688px;
     display: flex;
 }
 
 .backgroundImg {
     background-image: url('../../images/background.png');
-    height: 599px;
+    height: 688px;
     width: 1440px;
     position: absolute;
 }
@@ -16,7 +16,7 @@
     filter: blur(2.5px);
     /* opacity: 0.15; */
     width: 1440px;
-    height: 599px;
+    height: 688px;
     position: absolute;
 }
 
@@ -28,6 +28,8 @@
 .contentLeft {
     color: #FFFF;
     width: 515px;
+    margin-top: 77px;
+    margin-left: 87px;
 }
 
 .contentRight {
@@ -36,4 +38,77 @@
     border-radius: 10px;
     background-color: #FFFEFE;
     box-shadow: 0px 20px 40px rgba(39, 95, 158, 0.2);
+    margin-top: 77px;
+    padding-top: 40px;
+    padding-left: 40px;
+}
+
+.contentRight section {
+    display: flex;
+}
+
+.nameInput,
+.emailInput {
+    height: 47.5px;
+    width: 260px;
+    border-radius: 30px;
+    padding: 15px 20px 15px 20px;
+    box-sizing: border-box;
+    background-color: #F8F8F8;
+    border: 2px solid #F8F8F8;
+    margin-top: 16px;
+}
+
+.emailInput,
+.email {
+    margin-left: 30px;
+    outline: 0;
+}
+
+.nameInput {
+    outline: 0;
+}
+
+.message {
+    margin-top: 30px;
+}
+
+.email,
+.name,
+.message {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 17px;
+    color: #686868;
+}
+
+.messageInput {
+    height: 200px;
+    width: 548px;
+    border-radius: 30px;
+    background-color: #F8F8F8;
+    border: 2px solid #F8F8F8;
+    outline: 0;
+    margin-top: 15px;
+    text-indent: 20px;
+    padding-top: 15px;
+    box-sizing: border-box;
+    resize: none;
+}
+
+.button {
+    height: 48px;
+    width: 200px;
+    border-radius: 33px;
+    padding: 12px 20px 12px 20px;
+    background-color: #664EF9;
+    border: 2px solid #664EF9;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 24px;
+    color: #FFFF;
+    margin-top: 40px;
+    margin-left: 173px;
 }
