--- a/project/src/styles/Contacts/Contacts.module.css
+++ b/project/src/styles/Contacts/Contacts.module.css
@@ -32,6 +32,87 @@
     margin-left: 87px;
 }
 
+.title {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 100%;
+}
+
+.feedback {
+    height: 72px;
+    /* width: 515px; */
+    width: 450px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 150%;
+    margin-top: 30px;
+}
+
+.address {
+    margin-top: 30px;
+    display: flex;
+    align-items: center;
+}
+
+.phoneNumber,
+.emailAddress,
+.workTime {
+    display: flex;
+    align-items: center;
+    margin-top: 11px;
+}
+
+.address div:last-child,
+.phoneNumber div:nth-child(2),
+.emailAddress div:last-child,
+.workTime div:last-child {
+    margin-left: 20px;
+}
+
+.viber {
+    margin-left: 30px;
+}
+
+.telegram,
+.whatsapp {
+    margin-left: 10px;
+}
+
+.ip,
+.unp {
+    width: 516px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+}
+
+.ip,
+.info {
+    margin-top: 30px;
+}
+
+.info {
+    height: 90px;
+    width: 515px;
+    border-radius: 10px;
+    padding: 30px 25px 30px 25px;
+    background: rgba(80, 57, 189, 0.5);
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+}
+
+.info div {
+    height: 48px;
+    width: 405px;
+    margin-left: 20px;
+}
+
 .contentRight {
     height: 516px;
     width: 625px;
@@ -111,4 +192,13 @@
     color: #FFFF;
     margin-top: 40px;
     margin-left: 173px;
+}
+
+.socialNetworks {
+    margin-top: 62px;
+    margin-left: 64px;
+}
+
+.socialNetworks img {
+    margin-top: 15px;
 }
