--- a/project/src/styles/DetailNews/DetailNews.module.css
+++ b/project/src/styles/DetailNews/DetailNews.module.css
@@ -1,6 +1,6 @@
 .titleBlock {
     height: 280px;
-    width: 1440.80078125px;
+    width: 1440px;
     background: linear-gradient(90deg, #94AFFF 0%, #4E64F9 94.5%);
     opacity: 0.1;
     position: absolute;
@@ -46,6 +46,7 @@
 .bottomBlock {
     display: flex;
     margin-top: 30px;
+    width: 1150px;
 }
 
 .date {
@@ -67,21 +68,36 @@
 
 .socialNetworks {
     display: flex;
+    align-items: center;
+    margin-left: 355px;
 }
 
-.icon {
+.iconBlock {
     height: 35.77904510498047px;
     width: 35.779048919677734px;
     border-radius: 25px;
     background-color: #F4F5FA;
-    border: 1px solid red;
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-left: 20px;
+}
+
+.iconBlock:first-child {
+    margin-left: 15px;
+}
+
+.iconBlock:hover {
+    background-color: rgba(102, 78, 249, 0.1);
+}
+
+.icon {
+    height: 15px;
+
 }
 
 .icon:hover {
-    background-color: rgba(102, 78, 249, 0.1);
+    color: #664EF9;
 }
 
 .mainBlock {
