--- a/project/src/styles/DetailNews/DetailNews.module.css
+++ b/project/src/styles/DetailNews/DetailNews.module.css
@@ -119,5 +119,9 @@
 }
 
 .img {
-    height: 200px;
+    height: 563.2408447265625px;
+    width: 844px;
+    border-radius: 10px;
+    margin-left: 297.5px;
+    margin-top: -120px;
 }
