--- a/project/src/styles/DetailNews/DetailNews.module.css
+++ b/project/src/styles/DetailNews/DetailNews.module.css
@@ -133,10 +133,21 @@
     line-height: 30px;
     color: #1E2123;
     position: absolute;
+    margin-top: 62px;
+    margin-left: 81px;
+}
+
+.cards {
+    position: absolute;
+    margin-top: 136px;
+    margin-left: 81px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 30px;
 }
 
 .img {
-    height: 563.2408447265625px;
+    height: 563;
     width: 844px;
     border-radius: 10px;
     margin-left: 297.5px;
