--- a/project/src/styles/LogIn.module.css
+++ b/project/src/styles/LogIn.module.css
@@ -1,4 +1,5 @@
-.container {
+.containerLogIn,
+.containerRegistration {
     height: 688px;
     display: flex;
     justify-content: center;
@@ -22,7 +23,7 @@
     position: absolute;
 }
 
-.content {
+.contentLogIn {
     position: absolute;
     height: 536px;
     width: 406px;
@@ -73,7 +74,7 @@ input {
     outline: 0;
 }
 
-button {
+.button {
     height: 48px;
     width: 306px;
     border-radius: 33px;
@@ -192,7 +193,7 @@ button {
     color: #686868;
 }
 
-.createAccount a {
+.link {
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
@@ -200,4 +201,32 @@ button {
     line-height: 20px;
     text-decoration: none;
     color: #664EF9;
+    background-color: #FFFEFE;
+    border: none;
+}
+
+.contentRegistration {
+    position: absolute;
+    display: flex;
+    height: 581px;
+    width: 844px;
+    border-radius: 10px;
+    background: #FFFEFE;
+    box-shadow: 0px 20px 40px rgba(39, 95, 158, 0.2);
+}
+
+.userMust {
+    height: 231px;
+    width: 388px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 150%;
+    color: #686868;
+    margin-top: 110px;
+}
+
+.userMust span {
+    font-weight: 600;
 }
