--- a/project/src/styles/LogIn.module.css
+++ b/project/src/styles/LogIn.module.css
@@ -1,6 +1,7 @@
 .containerLogIn,
 .containerRegistration {
     height: 688px;
+    width: 1440px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -72,13 +73,17 @@ input {
     border: 2px solid #F7F7F7;
     margin-top: 20px;
     outline: 0;
+    text-indent: 52.5px;
+}
+
+input:focus {
+    background-color: #FFFF;
 }
 
 .button {
     height: 48px;
     width: 306px;
     border-radius: 33px;
-    padding: 12px 159px 12px 159px;
     box-sizing: border-box;
     background-color: #FFD54F;
     border: 2px solid #FFD54F;
@@ -215,6 +220,16 @@ input {
     box-shadow: 0px 20px 40px rgba(39, 95, 158, 0.2);
 }
 
+.leftBlock {
+    width: 356px;
+}
+
+.captcha {
+    height: 75px;
+    width: 306px;
+    border-radius: 3px;
+}
+
 .userMust {
     height: 231px;
     width: 388px;
@@ -225,8 +240,67 @@ input {
     line-height: 150%;
     color: #686868;
     margin-top: 110px;
+    margin-left: 50px;
 }
 
 .userMust span {
     font-weight: 600;
+}
+
+.point {
+    height: 5px;
+    width: 5px;
+    background: #686868;
+    border-radius: 50%;
+    margin-right: 10px;
+    float: left;
+    margin-top: 8px;
+}
+
+.login {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    text-decoration: none;
+    color: #686868;
+    margin-left: 50px;
+    margin-top: 60px;
+}
+
+.loginInput {
+    background-image: url('../images/login/user.svg');
+    background-repeat: no-repeat;
+    background-position-x: 25px;
+    background-position-y: 15px;
+}
+
+.loginInput:focus {
+    border: 2px solid rgba(78, 100, 249, 0.8);
+    background-image: url('../images/login/vector.svg');
+}
+
+.emailInput {
+    background-image: url('../images/login/mail.svg');
+    background-repeat: no-repeat;
+    background-position-x: 20px;
+    background-position-y: 16px;
+}
+
+.emailInput:focus {
+    border: 2px solid rgba(78, 100, 249, 0.8);
+    background-image: url('../images/login/mailFocus.svg');
+}
+
+.passwordInput {
+    background-image: url('../images/login/password.svg');
+    background-repeat: no-repeat;
+    background-position-x: 22.5px;
+    background-position-y: 15px;
+}
+
+.passwordInput:focus {
+    border: 2px solid rgba(78, 100, 249, 0.8);
+    background-image: url('../images/login/passwordFocus.svg');
 }
