--- a/project/src/styles/LogIn.module.css
+++ b/project/src/styles/LogIn.module.css
@@ -278,7 +278,7 @@ input:focus {
 
 .loginInput:focus {
     border: 2px solid rgba(78, 100, 249, 0.8);
-    background-image: url('../images/login/vector.svg');
+    background-image: url('../images/login/userFocus.svg');
 }
 
 .emailInput {
