--- a/project/src/styles/LogIn.module.css
+++ b/project/src/styles/LogIn.module.css
@@ -97,6 +97,11 @@ input:focus {
     justify-content: center;
     margin-left: 50px;
     margin-top: 38px;
+    text-indent: 0;
+}
+
+.button:focus {
+    background-color: #FFD54F;
 }
 
 .password {
