--- a/project/src/styles/LogIn.module.css
+++ b/project/src/styles/LogIn.module.css
@@ -58,7 +58,7 @@
     text-align: center;
 }
 
-.input {
+.inputs {
     margin-top: 20px;
     margin-left: 50px;
 }
@@ -67,13 +67,8 @@ input {
     height: 50px;
     width: 306px;
     border-radius: 30px;
-    padding: 15px 20px 15px 20px;
-    box-sizing: border-box;
     background: #F7F7F7;
     border: 2px solid #F7F7F7;
-    margin-top: 20px;
-    outline: 0;
-    text-indent: 52.5px;
 }
 
 input:focus {
@@ -92,10 +87,7 @@ input:focus {
     font-weight: 700;
     font-size: 16px;
     line-height: 24px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-left: 50px;
+    margin-left: 0px;
     margin-top: 38px;
     text-indent: 0;
 }
@@ -108,7 +100,7 @@ input:focus {
     display: flex;
     align-items: center;
     margin-top: 20px;
-    margin-left: 50px;
+    margin-left: 10px;
 }
 
 .rememberMe {
@@ -279,6 +271,11 @@ input:focus {
     background-repeat: no-repeat;
     background-position-x: 25px;
     background-position-y: 15px;
+    padding: 15px 20px 15px 20px;
+    box-sizing: border-box;
+    margin-top: 20px;
+    outline: 0;
+    text-indent: 52.5px;
 }
 
 .loginInput:focus {
@@ -291,6 +288,11 @@ input:focus {
     background-repeat: no-repeat;
     background-position-x: 20px;
     background-position-y: 16px;
+    padding: 15px 20px 15px 20px;
+    box-sizing: border-box;
+    margin-top: 20px;
+    outline: 0;
+    text-indent: 52.5px;
 }
 
 .emailInput:focus {
@@ -303,6 +305,13 @@ input:focus {
     background-repeat: no-repeat;
     background-position-x: 22.5px;
     background-position-y: 15px;
+    padding: 15px 20px 15px 20px;
+    box-sizing: border-box;
+
+
+    margin-top: 20px;
+    outline: 0;
+    text-indent: 52.5px;
 }
 
 .passwordInput:focus {
