--- a/project/src/styles/Main/Main.module.css
+++ b/project/src/styles/Main/Main.module.css
@@ -76,6 +76,26 @@
     display: flex;
 }
 
+.selectCity,
+.selectRooms {
+    width: 190.5px;
+    height: 68px;
+    border-right: 1px solid rgba(102, 78, 249, 0.1);
+}
+
+.selectPrices {
+    width: 215px;
+}
+
+.priceInput {
+    height: 37px;
+    width: 80px;
+    border-radius: 20px;
+    background: #F8F8F8;
+    border: 2px solid #F8F8F8;
+    text-indent: 14px;
+}
+
 .point {
     color: #664EF9;
 }
@@ -83,4 +103,44 @@
 .options {
     rotate: 90deg;
     color: #664EF9;
+}
+
+.selectButton {
+    height: 37px;
+    width: 150px;
+    border-radius: 20px;
+    background: #F8F8F8;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 17px;
+    color: #686868;
+    border: 2px solid #F8F8F8;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-left: 20px;
+    margin-top: 11px;
+}
+
+.selectButton:focus {
+    border: 2px solid rgba(102, 78, 249, 0.8);
+    background-color: #FFFFFF;
+}
+
+.citiesList {
+    height: 230px;
+    width: 150px;
+    border-radius: 10px;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 40px rgba(135, 124, 202, 0.3);
+    position: absolute;
+}
+
+.citiesList li {
+    list-style-type: none;
+    height: 37px;
+    padding: 10px 15px 10px 15px;
+    box-sizing: border-box;
 }
