--- a/project/src/styles/Main/Main.module.css
+++ b/project/src/styles/Main/Main.module.css
@@ -81,10 +81,27 @@
     width: 190.5px;
     height: 68px;
     border-right: 1px solid rgba(102, 78, 249, 0.1);
+    margin-top: 16px;
+    padding-left: 20px;
+    box-sizing: border-box;
 }
 
 .selectPrices {
     width: 215px;
+    height: 68px;
+    border-right: 1px solid rgba(102, 78, 249, 0.1);
+    margin-top: 16px;
+    padding-left: 20px;
+    box-sizing: border-box;
+}
+
+.inputTitle {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 17px;
+    color: #BDBDBD;
 }
 
 .priceInput {
@@ -92,12 +109,10 @@
     width: 80px;
     border-radius: 20px;
     background: #F8F8F8;
-    border: 2px solid #F8F8F8;
+    border: none;
     text-indent: 14px;
-}
-
-.point {
-    color: #664EF9;
+    padding: 0;
+    margin-top: 10px;
 }
 
 .options {
@@ -120,7 +135,6 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    margin-left: 20px;
     margin-top: 11px;
 }
 
@@ -143,4 +157,59 @@
     height: 37px;
     padding: 10px 15px 10px 15px;
     box-sizing: border-box;
+}
+
+.selectOptions {
+    display: flex;
+    align-items: center;
+    padding-left: 20px;
+    box-sizing: border-box;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 17px;
+    color: #1E2123;
+    border-right: 1px solid rgba(102, 78, 249, 0.1);
+    width: 161.5px;
+}
+
+.showMap {
+    display: flex;
+    align-items: center;
+    padding-left: 33px;
+    box-sizing: border-box;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 17px;
+    color: #1E2123;
+}
+
+.showMap button {
+    margin-left: 36px;
+    height: 37px;
+    width: 123px;
+    border-radius: 22px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    background: #FFD54F;
+    border: 2px solid #FFD54F;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 17px;
+    color: #242424;
+}
+
+.showMap img {
+    margin-left: -20px;
+}
+
+.point {
+    color: #664EF9;
+    margin-left: 5px;
 }
