--- a/project/src/styles/Apartments/Apartments.module.css
+++ b/project/src/styles/Apartments/Apartments.module.css
@@ -1,6 +1,14 @@
-.cardContainer {
+.cellContainer {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     column-gap: 30px;
     row-gap: 30px;
+}
+
+.listContainer {
+    display: grid;
+    grid-template-columns: 1fr;
+    column-gap: 30px;
+    row-gap: 30px;
+    width: 1280px;
 }
