--- a/project/src/styles/Apartments/ApartmentCard_cell.module.css
+++ b/project/src/styles/Apartments/ApartmentCard_cell.module.css
@@ -2,6 +2,8 @@
     height: 535px;
     width: 406px;
     border-radius: 10px;
+    /* filter: drop-shadow(0px 20px 40px rgba(39, 95, 158, 0.1)); */
+    box-shadow: 0px 20px 40px rgba(39, 95, 158, 0.1);
 }
 
 .image {
