--- a/project/src/styles/Apartments/ApartmentCard_list.module.css
+++ b/project/src/styles/Apartments/ApartmentCard_list.module.css
@@ -2,8 +2,8 @@
     height: 300px;
     width: 1280px;
     border-radius: 10px;
-    border: 1px solid green;
     display: flex;
+    filter: drop-shadow(0px 20px 40px rgba(135, 124, 202, 0.15));
 }
 
 .image {
