--- a/project/src/styles/Apartments/Apartments.module.css
+++ b/project/src/styles/Apartments/Apartments.module.css
@@ -1,8 +1,168 @@
+.titleBlock {
+    height: 319px;
+    width: 1440px;
+    /* background: linear-gradient(90deg, #94AFFF 0%, #4E64F9 94.5%);
+    opacity: 0.1; */
+    /* position: absolute;
+    z-index: 0; */
+}
+
+.link {
+    display: flex;
+    align-items: center;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 100%;
+    color: #686868;
+    /* position: absolute;
+    z-index: 1; */
+}
+
+.ellipse {
+    height: 3px;
+    width: 3px;
+    background-color: #664EF9;
+    border-radius: 50%;
+    margin-left: 9px;
+}
+
+.nav {
+    height: 100px;
+    width: 1062px;
+    background-color: #FFFFFF;
+    height: 82px;
+    width: 1440px;
+    box-shadow: 0px 20px 40px rgba(39, 95, 158, 0.08);
+    display: flex;
+    align-items: center;
+}
+
+.selectRooms {
+    width: 257px;
+    height: 82px;
+    border-right: 1px solid rgba(102, 78, 249, 0.1);
+    padding-left: 100px;
+    display: flex;
+    align-items: center;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 17px;
+    color: #664EF9;
+}
+
+.selectRooms button {
+    height: 37px;
+    width: 150px;
+    border-radius: 20px;
+    background: #F8F8F8;
+    border: 2px solid #F8F8F8;
+    margin-left: 20px;
+    display: flex;
+    align-items: center;
+    padding-left: 12px;
+}
+
+.selectRooms button img {
+    margin-left: 45.5px;
+}
+
+.selectPrices {
+    width: 406px;
+    height: 82px;
+    border-right: 1px solid rgba(102, 78, 249, 0.1);
+    display: flex;
+    align-items: center;
+    box-sizing: border-box;
+    padding-left: 25px;
+}
+
+.inputTitle {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 100%;
+    color: #664EF9;
+}
+
+.selectPrices input {
+    height: 37px;
+    width: 100px;
+    border-radius: 20px;
+    border: none;
+    background: rgba(102, 78, 249, 0.05);
+    text-indent: 10px;
+    outline: none;
+    padding: 0;
+    margin-left: 7.5px;
+}
+
+.selectPrices input:nth-child(2) {
+    margin-left: 20px;
+}
+
+.selectPrices p {
+    margin-left: 5.5px;
+}
+
+.selectOptions {
+    width: 178px;
+    height: 82px;
+    border-right: 1px solid rgba(102, 78, 249, 0.1);
+    display: flex;
+    align-items: center;
+    padding-left: 25px;
+    box-sizing: border-box;
+}
+
+.options {
+    color: #664EF9;
+    rotate: 90deg;
+    margin-left: 11px;
+}
+
+.clearButton {
+    height: 37px;
+    width: 100px;
+    border-radius: 22px;
+    border: 2px solid #F8F8F8;
+    background: #F8F8F8;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 17px;
+    color: #1E2123;
+    margin-left: 50px;
+}
+
+.showButton {
+    height: 37px;
+    width: 192px;
+    border-radius: 22px;
+    background: #664EF9;
+    border: 2px solid #664EF9;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 17px;
+    color: #FFFFFF;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin-left: 30px;
+}
+
 .cellContainer {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     column-gap: 30px;
     row-gap: 30px;
+    margin-left: 80px;
 }
 
 .listContainer {
