--- a/project/src/styles/Apartments/Apartments.module.css
+++ b/project/src/styles/Apartments/Apartments.module.css
@@ -1,10 +1,9 @@
 .titleBlock {
     height: 319px;
     width: 1440px;
-    /* background: linear-gradient(90deg, #94AFFF 0%, #4E64F9 94.5%);
-    opacity: 0.1; */
-    /* position: absolute;
-    z-index: 0; */
+    background: linear-gradient(90deg, #94AFFF 0%, #4E64F9 94.5%);
+    opacity: 0.1;
+    position: absolute;
 }
 
 .link {
@@ -15,8 +14,13 @@
     font-size: 14px;
     line-height: 100%;
     color: #686868;
-    /* position: absolute;
-    z-index: 1; */
+    position: absolute;
+    margin-top: 42px;
+    margin-left: 80px;
+}
+
+.link p {
+    margin-left: 7px;
 }
 
 .ellipse {
@@ -25,6 +29,42 @@
     background-color: #664EF9;
     border-radius: 50%;
     margin-left: 9px;
+}
+
+.mainTitle {
+    padding-top: 86px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 25px;
+    line-height: 100%;
+    color: #1E2123;
+    margin-left: 80px;
+}
+
+.secondTitle {
+    margin-left: 80px;
+    padding-top: 40px;
+}
+
+.buttons {
+    margin-left: 65px;
+    padding-top: 25px;
+    position: absolute;
+}
+
+.titleButton {
+    margin-left: 15px;
+    height: 30px;
+    width: 100px;
+    border-radius: 17px;
+    background-color: rgba(102, 78, 249, 0.1);
+    color: #664EF9;
+    border: none;
+}
+
+.titleButton:hover {
+    background: rgba(102, 78, 249, 0.2);
 }
 
 .nav {
@@ -36,6 +76,15 @@
     box-shadow: 0px 20px 40px rgba(39, 95, 158, 0.08);
     display: flex;
     align-items: center;
+    margin-top: 150px;
+}
+
+.arrowDown {
+    color: #664EF9;
+}
+
+.pageStyle {
+    height: 141px;
 }
 
 .selectRooms {
@@ -53,7 +102,7 @@
     color: #664EF9;
 }
 
-.selectRooms button {
+.selectButton {
     height: 37px;
     width: 150px;
     border-radius: 20px;
@@ -62,11 +111,8 @@
     margin-left: 20px;
     display: flex;
     align-items: center;
+    justify-content: space-around;
     padding-left: 12px;
-}
-
-.selectRooms button img {
-    margin-left: 45.5px;
 }
 
 .selectPrices {
