--- a/project/src/styles/Apartments/Apartments.module.css
+++ b/project/src/styles/Apartments/Apartments.module.css
@@ -218,3 +218,92 @@
     row-gap: 30px;
     width: 1280px;
 }
+
+.bottomBlock {
+    height: 167px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.share {
+    color: #686868;
+    margin-top: 5px;
+}
+
+.socialNetworks {
+    display: flex;
+}
+
+.iconBlock {
+    height: 35.77904510498047px;
+    width: 35.779052734375px;
+    border-radius: 25px;
+    background: #F4F5FA;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 15px;
+}
+
+.mapBlock {
+    height: 309px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.backgroundImg {
+    background-image: url('../../images/background.png');
+    height: 309px;
+    width: 1440px;
+    position: absolute;
+}
+
+.topImg {
+    background-image: url('../../images/topImage.png');
+    filter: blur(2.5px);
+    width: 1440px;
+    height: 309px;
+    position: absolute;
+}
+
+.mapBlockContent {
+    position: absolute;
+    color: #FFFFFF;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 25px;
+    line-height: 30px;
+    text-align: center;
+}
+
+.bottomBlockContent p:nth-child(2) {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 19px;
+    height: 38px;
+    width: 319px;
+    margin-left: 80px;
+}
+
+.bottomBlockContent button {
+    height: 37px;
+    width: 167px;
+    border-radius: 19px;
+    border: 2px solid #FFFFFF;
+    background-color: #FFFFFF;
+    color: #1E2123;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 17px;
+}
+
+.buttonImg {
+    fill: #FEC100;
+}
