--- a/project/src/styles/Main/Main.module.css
+++ b/project/src/styles/Main/Main.module.css
@@ -337,25 +337,24 @@
 }
 
 .mapBlock {
-    height: 309px;
-    width: 100%;
+    height: 440px;
+    width: 1440px;
     display: flex;
     justify-content: center;
-    align-items: center;
 }
 
-.backgroundImg {
+.backgroundMapImg {
     background-image: url('../../images/background.png');
-    height: 309px;
+    height: 440px;
     width: 1440px;
     position: absolute;
 }
 
-.topImg {
+.topMapImg {
     background-image: url('../../images/topImage.png');
     filter: blur(2.5px);
     width: 1440px;
-    height: 309px;
+    height: 440px;
     position: absolute;
 }
 
@@ -368,9 +367,10 @@
     font-size: 25px;
     line-height: 30px;
     text-align: center;
+    margin-top: 75px;
 }
 
-.mapBlockContent p:nth-child(2) {
+.mapBlockContent div:nth-child(2) {
     font-family: 'Inter';
     font-style: normal;
     font-weight: 500;
@@ -379,6 +379,7 @@
     height: 38px;
     width: 319px;
     margin-left: 80px;
+    margin-top: 20px;
 }
 
 .mapBlockContent button {
@@ -392,8 +393,70 @@
     font-weight: 600;
     font-size: 14px;
     line-height: 17px;
+    margin-top: 23px;
 }
 
 .buttonImg {
     fill: #FEC100;
+}
+
+.InfoforOwners {
+    display: flex;
+    margin-left: 51px;
+    margin-top: -125px;
+    position: relative;
+}
+
+.infoCard {
+    width: 406px;
+    height: 345px;
+    background: #FFFEFE;
+    box-shadow: 0px 20px 40px rgba(135, 124, 202, 0.15);
+    border-radius: 10px;
+    margin-left: 30px;
+}
+
+.infoCardGold {
+    background: linear-gradient(105.54deg, #FFD54F 33.53%, #FEC100 94.13%)
+}
+
+.infoCardTitle {
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 22px;
+    color: #664EF9;
+    display: flex;
+}
+
+.infoCardDescription {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: #1E2123;
+}
+
+.infoCard button {
+    height: 41px;
+    width: 245px;
+    border-radius: 17px;
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    background: linear-gradient(106.06deg, #FFD54F 1.12%, #FEC100 97.96%);
+    box-shadow: 0px 15px 40px rgba(254, 193, 0, 0.15);
+}
+
+.infoCard button:nth-child(4) {
+    height: 41px;
+    width: 198px;
+    border-radius: 17px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    border: none;
+    background: linear-gradient(270deg, #7E6AF3 0%, #6540CD 100%);
+    box-shadow: 0px 15px 40px rgba(0, 96, 206, 0.15);
+    color: #FFFFFF;
+    text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
 }
